# JavaVirtualMachine

./: .clang-format  .gitignore  CMakeLists.txt
doc/: 性能优化记录.md
draft/: gc.hpp
include/: java_base.hpp
include/classFile/: byte_code_reader.hpp  class_file.hpp  jar_parser.hpp
include/runtime/: byte_code_engine.def  byte_code_engine.hpp  gc.hpp  klass.hpp  oop.hpp  static_space.hpp  string_pool.hpp  vm_allocator.hpp  vm_fwd.hpp  vm_memory.hpp  vm_memory.tpp
include/utils/: singleton.hpp  spin_lock.hpp
resource/: A0.py  Demo.java
src/: CMakeLists.txt  main.cpp
src/classFile/: byte_code_reader.cpp  class_file.cpp  jar_parser.cpp
src/runtime/: byte_code_engine.cpp  gc.cpp  klass.cpp  oop.cpp
test/: CMakeLists.txt
test/src/: classFileTests.cpp
