find_package(Boost REQUIRED)
find_package(fmt REQUIRED)
find_package(spdlog REQUIRED)

aux_source_directory(${DIR_SRC_PATH} SRC)
include_directories(${DIR_INCLUDE_PATH})
add_executable(JavaVirtualMachine)
target_sources(JavaVirtualMachine PUBLIC ${SRC})
target_link_libraries(JavaVirtualMachine PRIVATE stdc++fs)

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE ${Boost_LIBRARIES})
else()
    message(FATAL_ERROR "Boost not found!")
endif()

if (fmt_FOUND) 
    include_directories(${fmt_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE fmt::fmt)
else()
    message(FATAL_ERROR "fmt not found!")
endif()

if (spdlog_FOUND) 
    include_directories(${spdlog_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE spdlog::spdlog)
else()
    message(FATAL_ERROR "spdlog not found!")
endif()