find_package(Boost REQUIRED)
find_package(fmt REQUIRED)
find_package(spdlog REQUIRED)
find_package(LLVM REQUIRED)

file(GLOB CLASS_FILE_SOURCES "classFile/*.cpp")
file(GLOB RUN_TIME_SOURCES "runtime/*.cpp")
file(GLOB MAIN_SOURCES "main.cpp")
set(SOURCES ${CLASS_FILE_SOURCES} ${RUN_TIME_SOURCES} ${MAIN_SOURCES})

add_executable(JavaVirtualMachine)
target_sources(JavaVirtualMachine PUBLIC ${SOURCES})
target_link_libraries(JavaVirtualMachine PRIVATE stdc++fs)
target_include_directories(JavaVirtualMachine PRIVATE ${DIR_INCLUDE_PATH})

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE ${Boost_LIBRARIES})
else()
    message(FATAL_ERROR "Boost not found!")
endif()

if (fmt_FOUND) 
    include_directories(${fmt_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE fmt::fmt)
else()
    message(FATAL_ERROR "fmt not found!")
endif()

if (spdlog_FOUND) 
    include_directories(${spdlog_INCLUDE_DIRS})
    target_link_libraries(JavaVirtualMachine PRIVATE spdlog::spdlog)
else()
    message(FATAL_ERROR "spdlog not found!")
endif()

if (LLVM_FOUND)
    include_directories(${LLVM_INCLUDE_DIRS})
    link_directories(${LLVM_LIBRARY_DIRS})
    add_definitions(${LLVM_DEFINITIONS})

    llvm_map_components_to_libnames(LLVM_LIBS core orcjit native)
    target_link_libraries(JavaVirtualMachine PRIVATE ${LLVM_LIBS})
else()
    message(FATAL_ERROR "llvm not found!")
endif()